--- a/index.html
+++ b/index.html
@@ -2,15 +2,35 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>What is your horoscope?</title>
+	
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Share+Tech" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
  
+ <div>
+ 	<h1 class="animated bounceInLeft">What is your horoscope sign?</h1>
+ </div>
+ 
+ <div>
+ 	<input type="text" id="userData">
+ </div>
+ <div>
+  	<button type="button" onclick="getInfo()">Your sign</button>
+ </div>
+
+
+<div>
+	<h1 id="name"></h1>
+	<img id="icon" src="">
+	<p id="sign"></p>
 
 
 
+</div>
 
 	<!-- custom script -->
 	<script type="text/javascript" src="js/main.js"></script>
